--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@ Dog or Cat?
                     Here, go ahead :
                 </p>
                 <hr>
-                <form action="#" method="post">
+                <form action="{{ url_for('index') }}" method="post" enctype="multipart/form-data">
                     <div class="form-group form-row align-items-center no-gutters">
                         <div class=" col-12 col-sm-2 pl-0">
                           <label for="uploadedFile">Upload Image:</label>
