Added result html with changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <a href="#" class="navbar-brand">Cats or Dogs?</a>
+                    <a href="{{ url_for('index') }}" class="navbar-brand">Cats or Dogs?</a>
                 </div>
             </div>
         </div>
