--- a/templates/result.html
+++ b/templates/result.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block title %}
-A {{ class_name }}!
+A {{ result.class_name }}!
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-md-4 card">
-                <img src="{{ image_path }}" alt="It's a {{ class_name }}" class="card-img-top">
+                <img src="{{ result.image_path }}" alt="It's a {{ result.class_name }}" class="card-img-top">
                 <div class="card-body">
-                    <p class="display-4">It's a beautiful {{ class_name }}!</p>
+                    <p class="display-4">It's a beautiful {{ result.class_name }}!</p>
                 </div>
             </div>
         </div>
