--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ Dog or Cat?
                           <label for="uploadedFile">Upload Image:</label>
                         </div>
                         <div class="col-12 col-sm-6">
-                         <input type="url" name="imageURL" id="imageURL">
+                         <input type="file" name="file" id="uploadedFile" class="btn btn-defualt form-control-file" value="">
                         </div>
                     </div>
                     <div class='form-group form-row'>
